界面更新、文档更新

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-    <title>Home</title>
+    <title>医院首页</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8" />
     <meta name="keywords" content="" />
@@ -49,6 +49,9 @@
                         <li class="nav-item  mr-3 mt-lg-0 mt-3">
                             <a class="nav-link" href="services.html">就诊须知</a>
                         </li>
+                        <li class="nav-item  mr-3 mt-lg-0 mt-3">
+                            <a class="nav-link" href="introduce.html">专家介绍</a>
+                        </li>
                         <li class="nav-item dropdown mr-3 mt-lg-0 mt-3">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                                 aria-expanded="false">
@@ -66,7 +69,7 @@
                         
                         <li>
                             <button type="button" class="btn  ml-lg-2 w3ls-btn" data-toggle="modal" aria-pressed="false" data-target="#exampleModal">
-                                注册
+                                登录
                             </button>
                         </li>
                     </ul>
@@ -328,7 +331,7 @@
 	<!-- //footer -->
 
 	<!-- login  -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade"  id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true"  style="width:500px;margin:0px auto">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -388,7 +391,7 @@
     </div>
     <!-- //login -->
 	 <!--/Register-->
-    <div class="modal fade" id="exampleModalCenter2" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal fade" id="exampleModalCenter2" tabindex="-1" role="dialog" aria-hidden="true" style="width:1000px;margin:0px auto">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header text-center">
@@ -421,9 +424,6 @@
 							<div class="reg-w3l">
 								<button type="submit" class="form-control submit mb-4">注册</button>
                            </div>
-						   <p class="text-center pb-4">
-                                <a href="#" class="text-secondary">同意医院相关注册规定</a>
-                            </p>
                         </form>
 
                     </div>
