--- a/manager/Manager_Changepwd.html
+++ b/manager/Manager_Changepwd.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="http://pratikborsadiya.in/blog/vali-admin/hero-social.png">
   <meta property="og:description"
     content="Vali is a responsive and free admin theme built with Bootstrap 4, SASS and PUG.js. It's fully customizable and modular.">
-  <title>易医 - 密码修改</title>
+  <title>易医 - 管理系统</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -51,7 +51,7 @@
       </div>
     </div>
     <ul class="app-menu">
-      <li><a class="app-menu__item" href="#"><i class="app-menu__icon fa fa-dashboard"></i><span
+      <li><a class="app-menu__item" href="Manager_Appointment.html"><i class="app-menu__icon fa fa-dashboard"></i><span
             class="app-menu__label">预约管理</span></a></li>
       <li><a class="app-menu__item" href="Manager_Drug.html"><i class="app-menu__icon fa fa-laptop"></i><span
             class="app-menu__label">药品管理</span></i></a>
