--- a/manager/Manager_Data_Patient.html
+++ b/manager/Manager_Data_Patient.html
@@ -25,7 +25,7 @@
 
 <body class="app sidebar-mini">
   <!-- Navbar-->
-  <header class="app-header"><a class="app-header__logo" href="../index.html">Vali</a>
+  <header class="app-header"><a class="app-header__logo" href="../index.html">Yiyi</a>
     <!-- Sidebar toggle button--><a class="app-sidebar__toggle" href="#" data-toggle="sidebar"
       aria-label="Hide Sidebar"></a>
     <!-- Navbar Right Menu-->
@@ -51,7 +51,7 @@
       </div>
     </div>
     <ul class="app-menu">
-      <li><a class="app-menu__item" href="#"><i class="app-menu__icon fa fa-dashboard"></i><span
+      <li><a class="app-menu__item" href="Manager_Appointment.html"><i class="app-menu__icon fa fa-dashboard"></i><span
             class="app-menu__label">预约管理</span></a></li>
       <li><a class="app-menu__item" href="Manager_Drug.html"><i class="app-menu__icon fa fa-laptop"></i><span
             class="app-menu__label">药品管理</span></i></a>
@@ -80,8 +80,8 @@
       </div>
       <ul class="app-breadcrumb breadcrumb">
         <li class="breadcrumb-item"><i class="fa fa-home fa-lg"></i></li>
-        <li class="breadcrumb-item"><a href="#">用户管理</a></li>
-        <li class="breadcrumb-item"><a href="#">患者资料</a></li>
+        <li class="breadcrumb-item">用户管理</li>
+        <li class="breadcrumb-item"><a style="color:#009688;" href="#">患者资料</a></li>
       </ul>
     </div>
     <div class="row">
