--- a/patient/Patient_Medicine.html
+++ b/patient/Patient_Medicine.html
@@ -16,7 +16,7 @@
   <meta property="og:image" content="http://pratikborsadiya.in/blog/vali-admin/hero-social.png">
   <meta property="og:description"
     content="Vali is a responsive and free admin theme built with Bootstrap 4, SASS and PUG.js. It's fully customizable and modular.">
-  <title>查看点滴</title>
+  <title>易医 - 查看点滴</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -64,7 +64,7 @@
         <ul class="treeview-menu">
           <li><a class="treeview-item" href="Patient_Triage_AddTriageInfo.html"><i class="icon fa fa-circle-o"></i>
               智能分诊</a></li>
-          <li><a class="treeview-item" href="Patient_Triage_TriageInfo.html" target="_blank" rel="noopener"><i
+          <li><a class="treeview-item" href="Patient_Triage_TriageInfo.html" rel="noopener"><i
                 class="icon fa fa-circle-o"></i>分诊历史</a></li>
         </ul>
       </li>
@@ -82,7 +82,8 @@
             class="app-menu__icon fa fa-th-list"></i><span class="app-menu__label">药品提示</span><i
             class="treeview-indicator fa fa-angle-right"></i></a>
         <ul class="treeview-menu">
-          <li><a class="treeview-item  active" href="Patient_Medicine.html"><i class="icon fa fa-circle-o"></i> 用药提示</a></li>
+          <li><a class="treeview-item  active" href="Patient_Medicine.html"><i class="icon fa fa-circle-o"></i> 用药提示</a>
+          </li>
           <li><a class="treeview-item" href="Patient_Drip.html"><i class="icon fa fa-circle-o"></i>点滴提示</a></li>
         </ul>
       </li>
@@ -94,7 +95,7 @@
   <main class="app-content">
     <div class="app-title">
       <div>
-        <h1><i class="fa fa-th-list"></i> 药品提示</h1>
+        <h1> 药品提示</h1>
       </div>
       <ul class="app-breadcrumb breadcrumb side">
         <li class="breadcrumb-item"><i class="fa fa-home fa-lg"></i></li>
