--- a/staff/Nurse_Chat.html
+++ b/staff/Nurse_Chat.html
@@ -16,7 +16,7 @@
   <meta property="og:image" content="http://pratikborsadiya.in/blog/vali-admin/hero-social.png">
   <meta property="og:description"
     content="Vali is a responsive and free admin theme built with Bootstrap 4, SASS and PUG.js. It's fully customizable and modular.">
-  <title>消息管理</title>
+  <title>易医 - 消息管理</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -61,6 +61,8 @@
       </div>
     </div>
     <ul class="app-menu">
+      <li><a class="app-menu__item active" href="Doctor_Call.html"><i class="app-menu__icon fa fa-pie-chart"></i><span
+            class="app-menu__label">查看预约</span></a></li>
       <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i
             class="app-menu__icon fa fa-laptop"></i><span class="app-menu__label">病历</span><i
             class="treeview-indicator fa fa-angle-right"></i></a>
