--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-    <title>About</title>
+    <title>科室分布</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8" />
     <meta name="keywords" content="" />
@@ -30,7 +30,7 @@
             <nav class="navbar navbar-expand-lg navbar-light bg-gradient-secondary">
                 <h1>
                     <a class="navbar-brand text-white" href="index.html">
-                       w旺旺医院
+                       旺旺医院
                     </a>
                 </h1>
                 <button class="navbar-toggler ml-md-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -46,6 +46,9 @@
                         </li>
                         <li class="nav-item  mr-3 mt-lg-0 mt-3">
                             <a class="nav-link" href="services.html">就诊须知</a>
+                        </li>
+                        <li class="nav-item mr-3 mt-lg-0 mt-3">
+                            <a class="nav-link" href="introduce.html">专家介绍</a>
                         </li>
                         <li class="nav-item dropdown active mr-3 mt-lg-0 mt-3">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
@@ -166,7 +169,7 @@
 <!-- //footer -->
 
 	<!-- login  -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade"  id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true"  style="width:500px;margin:0px auto">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -225,56 +228,79 @@
         </div>
     </div>
     <!-- //login -->
- <!--/Register-->
-<div class="modal fade" id="exampleModalCenter2" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header text-center">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <div class="login px-4 mx-auto mw-100">
-                    <h5 class="modal-title text-center text-dark mb-4">注册</h5>
-                    <form action="#" method="post">
-                        <div class="form-group">
-                            <label class="col-form-label">姓名</label>
-
-                            <input type="text" class="form-control" id="validationDefault01" placeholder="" required="">
-                        </div>
-                        <div class="form-group">
-                            <label class="col-form-label">电话</label>
-                            <input type="text" class="form-control" id="validationDefault02" placeholder="" required="">
-                        </div>
-
-                        <div class="form-group">
-                            <label class="mb-2 col-form-label">密码</label>
-                            <input type="password" class="form-control" id="password1" placeholder="" required="">
-                        </div>
-                        <div class="form-group">
-                            <label class="col-form-label">重复密码</label>
-                            <input type="password" class="form-control" id="password2" placeholder="" required="">
-                        </div>
-                        <div class="reg-w3l">
-                            <button type="submit" class="form-control submit mb-4">注册</button>
-                       </div>
-                       <p class="text-center pb-4">
-                            <a href="#" class="text-secondary">同意医院相关注册规定</a>
-                        </p>
-                    </form>
-
+	 <!--/Register-->
+    <div class="modal fade" id="exampleModalCenter2" tabindex="-1" role="dialog" aria-hidden="true" style="width:1000px;margin:0px auto">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header text-center">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
-            </div>
+                <div class="modal-body">
+                    <div class="login px-4 mx-auto mw-100">
+                        <h5 class="modal-title text-center text-dark mb-4">注册</h5>
+                        <form action="#" method="post">
+                            <div class="form-group">
+                                <label class="col-form-label">姓名</label>
 
+                                <input type="text" class="form-control" id="validationDefault01" placeholder="" required="">
+                            </div>
+                            <div class="form-group">
+                                <label class="col-form-label">电话</label>
+                                <input type="text" class="form-control" id="validationDefault02" placeholder="" required="">
+                            </div>
+
+                            <div class="form-group">
+                                <label class="mb-2 col-form-label">密码</label>
+                                <input type="password" class="form-control" id="password1" placeholder="" required="">
+                            </div>
+                            <div class="form-group">
+                                <label class="col-form-label">重复密码</label>
+                                <input type="password" class="form-control" id="password2" placeholder="" required="">
+                            </div>
+							<div class="reg-w3l">
+								<button type="submit" class="form-control submit mb-4">注册</button>
+                           </div>
+                        </form>
+
+                    </div>
+                </div>
+
+            </div>
         </div>
     </div>
-</div>
-<!--//Register-->
+    <!--//Register-->
+
     <!-- //footer -->
     <!-- js -->
     <script src="js/jquery-2.2.3.min.js"></script>
     <!-- //js -->
+	<script src="js/minimal-slider.js"></script>
+<!-- flexSlider (for testimonials) -->
+		<!-- Calendar -->
+				<link rel="stylesheet" href="css/jquery-ui.css" />
+				<script src="js/jquery-ui.js"></script>
+				  <script>
+						  $(function() {
+							$( "#datepicker" ).datepicker();
+						  });
+				  </script>
+				<!-- //Calendar -->
+
+	<script defer src="js/jquery.flexslider.js"></script>
+	<script>
+		$(window).load(function () {
+			$('.flexslider').flexslider({
+				animation: "slide",
+				start: function (slider) {
+					$('body').removeClass('loading');
+				}
+			});
+		});
+	</script>
+	<!-- //flexSlider (for testimonials) -->
+
     <!-- script for password match -->
     <script>
         window.onload = function () {
@@ -390,3 +416,5 @@
                 alert("验证码正确！");
             }       
         }</script>
+    
+    
