--- a/patient/Patient_Chat.html
+++ b/patient/Patient_Chat.html
@@ -16,7 +16,7 @@
   <meta property="og:image" content="http://pratikborsadiya.in/blog/vali-admin/hero-social.png">
   <meta property="og:description"
     content="Vali is a responsive and free admin theme built with Bootstrap 4, SASS and PUG.js. It's fully customizable and modular.">
-  <title>消息盒子</title>
+  <title>易医 - 消息盒子</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -37,10 +37,10 @@
       <!-- User Menu-->
       <li class="dropdown"><a class="app-nav__item" href="#" data-toggle="dropdown" aria-label="Open Profile Menu"><i
             class="fa fa-user fa-lg"></i></a>
-        <ul class="dropdown-menu settings-menu dropdown-menu-right">                      
-            <li><a class="dropdown-item" href="Patient_PersonInfo.html"><i class="fa fa-user fa-lg"></i> 个人资料</a></li>
-            <li><a class="dropdown-item" href="Patient_Changepwd.html"><i class="fa fa-cog fa-lg"></i> 修改密码</a></li>
-            <li><a class="dropdown-item" href="../index.html"><i class="fa fa-sign-out fa-lg"></i> 注销</a></li>
+        <ul class="dropdown-menu settings-menu dropdown-menu-right">
+          <li><a class="dropdown-item" href="Patient_PersonInfo.html"><i class="fa fa-user fa-lg"></i> 个人资料</a></li>
+          <li><a class="dropdown-item" href="Patient_Changepwd.html"><i class="fa fa-cog fa-lg"></i> 修改密码</a></li>
+          <li><a class="dropdown-item" href="../index.html"><i class="fa fa-sign-out fa-lg"></i> 注销</a></li>
         </ul>
       </li>
     </ul>
@@ -56,37 +56,49 @@
       </div>
     </div>
     <ul class="app-menu">
-      <li><a class="app-menu__item" href="Patient_MedicalRecord.html"><i class="app-menu__icon fa fa-dashboard"></i><span class="app-menu__label">病历</span></a></li>
-      <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i class="app-menu__icon fa fa-laptop"></i><span class="app-menu__label">分诊服务</span><i class="treeview-indicator fa fa-angle-right"></i></a>
+      <li><a class="app-menu__item" href="Patient_MedicalRecord.html"><i
+            class="app-menu__icon fa fa-dashboard"></i><span class="app-menu__label">病历</span></a></li>
+      <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i
+            class="app-menu__icon fa fa-laptop"></i><span class="app-menu__label">分诊服务</span><i
+            class="treeview-indicator fa fa-angle-right"></i></a>
         <ul class="treeview-menu">
-          <li><a class="treeview-item" href="Patient_Triage_AddTriageInfo.html"><i class="icon fa fa-circle-o"></i> 智能分诊</a></li>
-          <li><a class="treeview-item" href="Patient_Triage_TriageInfo.html" target="_blank" rel="noopener"><i class="icon fa fa-circle-o"></i>分诊历史</a></li>
+          <li><a class="treeview-item" href="Patient_Triage_AddTriageInfo.html"><i class="icon fa fa-circle-o"></i>
+              智能分诊</a></li>
+          <li><a class="treeview-item" href="Patient_Triage_TriageInfo.html" rel="noopener"><i
+                class="icon fa fa-circle-o"></i>分诊历史</a></li>
         </ul>
       </li>
-      <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i class="app-menu__icon fa fa-edit"></i><span class="app-menu__label">挂号</span><i class="treeview-indicator fa fa-angle-right"></i></a>
+      <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i
+            class="app-menu__icon fa fa-edit"></i><span class="app-menu__label">挂号</span><i
+            class="treeview-indicator fa fa-angle-right"></i></a>
         <ul class="treeview-menu">
-          <li><a class="treeview-item" href="Patient_Registration_AddRegInfo.html"><i class="icon fa fa-circle-o"></i>门诊预约</a></li>
-          <li><a class="treeview-item" href="Patient_Registration_RegInfo.html"><i class="icon fa fa-circle-o"></i>预约历史</a></li>
+          <li><a class="treeview-item" href="Patient_Registration_AddRegInfo.html"><i
+                class="icon fa fa-circle-o"></i>门诊预约</a></li>
+          <li><a class="treeview-item" href="Patient_Registration_RegInfo.html"><i
+                class="icon fa fa-circle-o"></i>预约历史</a></li>
         </ul>
       </li>
-      <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i class="app-menu__icon fa fa-th-list"></i><span class="app-menu__label">药品提示</span><i class="treeview-indicator fa fa-angle-right"></i></a>
+      <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i
+            class="app-menu__icon fa fa-th-list"></i><span class="app-menu__label">药品提示</span><i
+            class="treeview-indicator fa fa-angle-right"></i></a>
         <ul class="treeview-menu">
           <li><a class="treeview-item" href="Patient_Medicine.html"><i class="icon fa fa-circle-o"></i> 用药提示</a></li>
           <li><a class="treeview-item" href="Patient_Drip.html"><i class="icon fa fa-circle-o"></i>点滴提示</a></li>
         </ul>
       </li>
-      <li><a class="app-menu__item active" href="Patient_Chat.html"><i class="app-menu__icon fa fa-pie-chart"></i><span class="app-menu__label">消息盒子</span></a></li>
-      
+      <li><a class="app-menu__item active" href="Patient_Chat.html"><i class="app-menu__icon fa fa-pie-chart"></i><span
+            class="app-menu__label">消息盒子</span></a></li>
+
     </ul>
   </aside>
   <main class="app-content">
     <div class="app-title">
       <div>
-        <h1><i class="fa fa-archive"></i> 消息盒子</h1>
+        <h1> 消息盒子</h1>
       </div>
       <ul class="app-breadcrumb breadcrumb">
         <li class="breadcrumb-item"><i class="fa fa-home fa-lg"></i></li>
-        <li class="breadcrumb-item"><a href="#">消息盒子</a></li>
+        <li class="breadcrumb-item"><a href="#" style="color:#009688;">消息盒子</a></li>
       </ul>
     </div>
 
@@ -134,43 +146,43 @@
             <div class="messages" id="latest" style="max-height: 315px;min-height: 315px;">
               <div onmouseover="this.style.backgroundColor='rgb(197, 193, 193)'"
                 onmouseout="this.style.backgroundColor='#FFF'" class="message"
-                onclick="window.open('index.html','_self')"><img
-                  src="../images/doctor.jpg" style="width:48px;height:48px">
+                onclick="window.open('index.html','_self')"><img src="../images/doctor.jpg"
+                  style="width:48px;height:48px">
                 医生A
               </div>
               <div onmouseover="this.style.backgroundColor='rgb(197, 193, 193)'"
-                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img
-                src="../images/nurse.jpg" style="width:48px;height:48px">
+                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img src="../images/nurse.jpg"
+                  style="width:48px;height:48px">
                 护士B
               </div>
               <div onmouseover="this.style.backgroundColor='rgb(197, 193, 193)'"
-                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img
-                src="../images/doctor.jpg" style="width:48px;height:48px">
+                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img src="../images/doctor.jpg"
+                  style="width:48px;height:48px">
                 医生C
               </div>
               <div onmouseover="this.style.backgroundColor='rgb(197, 193, 193)'"
-                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img
-                src="../images/doctor.jpg" style="width:48px;height:48px">
+                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img src="../images/doctor.jpg"
+                  style="width:48px;height:48px">
                 医生D
               </div>
               <div onmouseover="this.style.backgroundColor='rgb(197, 193, 193)'"
-                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img
-                src="../images/doctor.jpg" style="width:48px;height:48px">
+                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img src="../images/doctor.jpg"
+                  style="width:48px;height:48px">
                 医生E
               </div>
               <div onmouseover="this.style.backgroundColor='rgb(197, 193, 193)'"
-                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img
-                src="../images/doctor.jpg" style="width:48px;height:48px">
+                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img src="../images/doctor.jpg"
+                  style="width:48px;height:48px">
                 医生F
               </div>
               <div onmouseover="this.style.backgroundColor='rgb(197, 193, 193)'"
-                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img
-                src="../images/doctor.jpg" style="width:48px;height:48px">
+                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img src="../images/doctor.jpg"
+                  style="width:48px;height:48px">
                 医生G
               </div>
               <div onmouseover="this.style.backgroundColor='rgb(197, 193, 193)'"
-                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img
-                src="../images/doctor.jpg" style="width:48px;height:48px">
+                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img src="../images/doctor.jpg"
+                  style="width:48px;height:48px">
                 医生H
               </div>
 
@@ -179,43 +191,43 @@
             <div class="messages" id="group" style="max-height: 315px;min-height: 315px;display:none;">
               <div onmouseover="this.style.backgroundColor='rgb(197, 193, 193)'"
                 onmouseout="this.style.backgroundColor='#FFF'" class="message"
-                onclick="window.open('index.html','_self')"><img
-                src="../images/nurse.jpg" style="width:48px;height:48px">
+                onclick="window.open('index.html','_self')"><img src="../images/nurse.jpg"
+                  style="width:48px;height:48px">
                 护士1
               </div>
               <div onmouseover="this.style.backgroundColor='rgb(197, 193, 193)'"
-                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img
-                src="../images/doctor.jpg" style="width:48px;height:48px">
+                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img src="../images/doctor.jpg"
+                  style="width:48px;height:48px">
                 医生2
               </div>
               <div onmouseover="this.style.backgroundColor='rgb(197, 193, 193)'"
-                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img
-                src="../images/doctor.jpg" style="width:48px;height:48px">
+                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img src="../images/doctor.jpg"
+                  style="width:48px;height:48px">
                 医生3
               </div>
               <div onmouseover="this.style.backgroundColor='rgb(197, 193, 193)'"
-                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img
-                src="../images/nurse.jpg" style="width:48px;height:48px">
+                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img src="../images/nurse.jpg"
+                  style="width:48px;height:48px">
                 护士4
               </div>
               <div onmouseover="this.style.backgroundColor='rgb(197, 193, 193)'"
-                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img
-                src="../images/nurse.jpg" style="width:48px;height:48px">
+                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img src="../images/nurse.jpg"
+                  style="width:48px;height:48px">
                 护士5
               </div>
               <div onmouseover="this.style.backgroundColor='rgb(197, 193, 193)'"
-                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img
-                src="../images/doctor.jpg" style="width:48px;height:48px">
+                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img src="../images/doctor.jpg"
+                  style="width:48px;height:48px">
                 医生6
               </div>
               <div onmouseover="this.style.backgroundColor='rgb(197, 193, 193)'"
-                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img
-                src="../images/doctor.jpg" style="width:48px;height:48px">
+                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img src="../images/doctor.jpg"
+                  style="width:48px;height:48px">
                 医生7
               </div>
               <div onmouseover="this.style.backgroundColor='rgb(197, 193, 193)'"
-                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img
-                src="../images/doctor.jpg" style="width:48px;height:48px">
+                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img src="../images/doctor.jpg"
+                  style="width:48px;height:48px">
                 医生8
               </div>
 
@@ -239,10 +251,10 @@
   <script type="text/javascript">
     if (document.location.hostname == 'pratikborsadiya.in') {
       (function (i, s, o, g, r, a, m) {
-      i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-        (i[r].q = i[r].q || []).push(arguments)
-      }, i[r].l = 1 * new Date(); a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+          (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date(); a = s.createElement(o),
+          m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
       })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
       ga('create', 'UA-72504830-1', 'auto');
       ga('send', 'pageview');
@@ -258,7 +270,7 @@
       }
       else {
         document.getElementById("group").style.display = "block";
-        document.getElementById("latest").style.display = "none";        
+        document.getElementById("latest").style.display = "none";
         document.getElementById("btn1").style.backgroundColor = '#009688';
         document.getElementById("btn2").style.backgroundColor = "#009687a8";
       }
