--- a/patient/Patient_PersonInfo.html
+++ b/patient/Patient_PersonInfo.html
@@ -2,47 +2,53 @@
 <html lang="en">
 
 <head>
+  <meta name="description"
+    content="Vali is a responsive and free admin theme built with Bootstrap 4, SASS and PUG.js. It's fully customizable and modular.">
+  <!-- Twitter meta-->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:site" content="@pratikborsadiya">
+  <meta property="twitter:creator" content="@pratikborsadiya">
   <!-- Open Graph Meta-->
   <meta property="og:type" content="website">
-  <meta property="og:site_name" content="Vali Admin">
-  <meta property="og:title" content="Vali - Free Bootstrap 4 admin theme">
+  <meta property="og:site_name" content="YY">
+  <meta property="og:title" content="">
   <meta property="og:url" content="http://pratikborsadiya.in/blog/vali-admin">
   <meta property="og:image" content="http://pratikborsadiya.in/blog/vali-admin/hero-social.png">
-  <meta property="og:description"
-    content="Vali is a responsive and free admin theme built with Bootstrap 4, SASS and PUG.js. It's fully customizable and modular.">
-  <title>易医 - 患者个人资料</title>
+  <meta property="og:description" content="YYProject is only programmed for zhsjsy.">
+  <title>易医 - 个人资料</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Main CSS-->
-  <link rel="stylesheet" type="text/css" href="css/main.css">
-  <link rel="stylesheet" type="text/css" href="css/triage.css">
-  <link rel="stylesheet" type="text/css" href="layui/css/layui.css">
+  <link rel="stylesheet" type="text/css" href="../css/main.css">
   <!-- Font-icon css-->
   <link rel="stylesheet" type="text/css"
     href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
+
+  <head>
+    <meta charset="UTF-8">
+    <title>易医-患者个人资料</title>
+  </head>
 
 <body class="app sidebar-mini">
   <!-- Navbar-->
-  <header class="app-header"><a class="app-header__logo" href="index.html">Yiyi</a>
+  <header class="app-header"><a class="app-header__logo" href="#">Yiyi</a>
     <!-- Sidebar toggle button--><a class="app-sidebar__toggle" href="#" data-toggle="sidebar"
       aria-label="Hide Sidebar"></a>
     <!-- Navbar Right Menu-->
     <ul class="app-nav">
-      <!-- User Menu-->
+      <!-- 小人菜单栏-->
       <li class="dropdown"><a class="app-nav__item" href="#" data-toggle="dropdown" aria-label="Open Profile Menu"><i
             class="fa fa-user fa-lg"></i></a>
         <ul class="dropdown-menu settings-menu dropdown-menu-right">
-          <li><a class="dropdown-item" href="page-user.html"><i class="fa fa-user fa-lg"></i> 个人资料</a></li>
-          <li><a class="dropdown-item" href="page-login.html"><i class="fa fa-sign-out fa-lg"></i> 修改密码</a></li>
-          <li><a class="dropdown-item" href="page-login.html"><i class="fa fa-sign-out fa-lg"></i> 注销</a></li>
+          <li><a class="dropdown-item" href="Patient_PersonInfo.html"><i class="fa fa-user fa-lg"></i> 个人资料</a></li>
+          <li><a class="dropdown-item" href="Patient_Changepwd.html"><i class="fa fa-cog fa-lg"></i> 修改密码</a></li>
+          <li><a class="dropdown-item" href="../index.html"><i class="fa fa-sign-out fa-lg"></i> 注销</a></li>
         </ul>
       </li>
     </ul>
   </header>
-
-  <!-- Sidebar menu-->
+  <!--统一导航栏-->
   <div class="app-sidebar__overlay" data-toggle="sidebar"></div>
   <aside class="app-sidebar">
     <div class="app-sidebar__user"><img class="app-sidebar__user-avatar"
@@ -53,30 +59,41 @@
       </div>
     </div>
     <ul class="app-menu">
-      <li><a class="app-menu__item" href="Patient_MedicalRecord.html"><i class="app-menu__icon fa fa-dashboard"></i><span class="app-menu__label">病历</span></a></li>
-      <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i class="app-menu__icon fa fa-laptop"></i><span class="app-menu__label">分诊服务</span><i class="treeview-indicator fa fa-angle-right"></i></a>
+      <li><a class="app-menu__item" href="Patient_MedicalRecord.html"><i
+            class="app-menu__icon fa fa-dashboard"></i><span class="app-menu__label">病历</span></a></li>
+      <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i
+            class="app-menu__icon fa fa-laptop"></i><span class="app-menu__label">分诊服务</span><i
+            class="treeview-indicator fa fa-angle-right"></i></a>
         <ul class="treeview-menu">
-          <li><a class="treeview-item" href="Patient_Triage_AddTriageInfo.html"><i class="icon fa fa-circle-o"></i> 智能分诊</a></li>
-          <li><a class="treeview-item" href="Patient_Triage_TriageInfo.html" target="_blank" rel="noopener"><i class="icon fa fa-circle-o"></i>分诊历史</a></li>
+          <li><a class="treeview-item" href="Patient_Triage_AddTriageInfo.html"><i class="icon fa fa-circle-o"></i>
+              智能分诊</a></li>
+          <li><a class="treeview-item" href="Patient_Triage_TriageInfo.html" rel="noopener"><i
+                class="icon fa fa-circle-o"></i>分诊历史</a></li>
         </ul>
       </li>
-      <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i class="app-menu__icon fa fa-edit"></i><span class="app-menu__label">挂号</span><i class="treeview-indicator fa fa-angle-right"></i></a>
+      <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i
+            class="app-menu__icon fa fa-edit"></i><span class="app-menu__label">挂号</span><i
+            class="treeview-indicator fa fa-angle-right"></i></a>
         <ul class="treeview-menu">
-          <li><a class="treeview-item" href="Patient_Registration_AddRegInfo.html"><i class="icon fa fa-circle-o"></i>门诊预约</a></li>
-          <li><a class="treeview-item" href="Patient_Registration_RegInfo.html"><i class="icon fa fa-circle-o"></i>预约历史</a></li>
+          <li><a class="treeview-item" href="Patient_Registration_AddRegInfo.html"><i
+                class="icon fa fa-circle-o"></i>门诊预约</a></li>
+          <li><a class="treeview-item" href="Patient_Registration_RegInfo.html"><i
+                class="icon fa fa-circle-o"></i>预约历史</a></li>
         </ul>
       </li>
-      <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i class="app-menu__icon fa fa-th-list"></i><span class="app-menu__label">药品提示</span><i class="treeview-indicator fa fa-angle-right"></i></a>
+      <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i
+            class="app-menu__icon fa fa-th-list"></i><span class="app-menu__label">药品提示</span><i
+            class="treeview-indicator fa fa-angle-right"></i></a>
         <ul class="treeview-menu">
           <li><a class="treeview-item" href="Patient_Medicine.html"><i class="icon fa fa-circle-o"></i> 用药提示</a></li>
           <li><a class="treeview-item" href="Patient_Drip.html"><i class="icon fa fa-circle-o"></i>点滴提示</a></li>
         </ul>
       </li>
-      <li><a class="app-menu__item" href="Patient_Chat.html"><i class="app-menu__icon fa fa-pie-chart"></i><span class="app-menu__label">消息盒子</span></a></li>
-      
+      <li><a class="app-menu__item" href="Patient_Chat.html"><i class="app-menu__icon fa fa-pie-chart"></i><span
+            class="app-menu__label">消息盒子</span></a></li>
+
     </ul>
   </aside>
-
   <main class="app-content">
     <div class="app-title">
       <div>
@@ -84,7 +101,7 @@
       </div>
       <ul class="app-breadcrumb breadcrumb">
         <li class="breadcrumb-item"><i class="fa fa-home fa-lg"></i></li>
-        <li class="breadcrumb-item"><a href="#">个人资料</a></li>
+        <li class="breadcrumb-item"><a style="color:#009688;" href="#">个人资料</a></li>
       </ul>
     </div>
 
@@ -234,7 +251,7 @@
                   </div>
                 </div>
               </div>
-              
+
             </div>
           </div>
         </div>
@@ -244,16 +261,39 @@
     </div>
   </main>
 
+
+
   <!-- Essential javascripts for application to work-->
-  <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/main.js"></script>
-  <script src="js/jquery.min.js"></script>
+  <script src="../js/jquery-3.3.1.min.js"></script>
+  <script src="../js/popper.min.js"></script>
+  <script src="../js/bootstrap.min.js"></script>
+  <script src="../js/main.js"></script>
   <!-- The javascript plugin to display page loading on top-->
-  <script src="js/plugins/pace.min.js"></script>
-  <script src="layui/layui.js"></script>
+  <script src="../js/plugins/pace.min.js"></script>
   <!-- Page specific javascripts-->
+  <script type="text/javascript" src="../js/plugins/bootstrap-datepicker.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/select2.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/bootstrap-datepicker.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/dropzone.js"></script>
+  <script type="text/javascript">
+    $('#sl').on('click', function () {
+      $('#tl').loadingBtn();
+      $('#tb').loadingBtn({ text: "Signing In" });
+    });
+
+    $('#el').on('click', function () {
+      $('#tl').loadingBtnComplete();
+      $('#tb').loadingBtnComplete({ html: "Sign In" });
+    });
+
+    $('#demoDate').datepicker({
+      format: "dd/mm/yyyy",
+      autoclose: true,
+      todayHighlight: true
+    });
+
+    $('#demoSelect').select2();
+  </script>
   <!-- Google analytics script-->
   <script type="text/javascript">
     if (document.location.hostname == 'pratikborsadiya.in') {
@@ -266,25 +306,6 @@
       ga('create', 'UA-72504830-1', 'auto');
       ga('send', 'pageview');
     }
-
-
-    $(document).ready(function () {
-      $('.woman_front_head').hover(function () {
-        $(".headLink").css('display', 'block');
-      }, function () {
-        $(".headLink").css('display', 'none');
-      });
-      $(".headLink").hover(function () {
-        $(this).css('display', 'block');
-      }, function () {
-        $(this).css('display', 'none');
-      });
-
-      $(".woman_box").hide();
-    });
-
-
-
   </script>
 
   <script>
@@ -293,7 +314,6 @@
       $(".hhh").show();
     }
   </script>
-
 
 </body>
 
