--- a/patient/Patient_Registration_AddRegInfo.html
+++ b/patient/Patient_Registration_AddRegInfo.html
@@ -25,7 +25,7 @@
 
 <body class="app sidebar-mini">
   <!-- Navbar-->
-  <header class="app-header"><a class="app-header__logo" href="index.html">Vali</a>
+  <header class="app-header"><a class="app-header__logo" href="index.html">Yiyi</a>
     <!-- Sidebar toggle button--><a class="app-sidebar__toggle" href="#" data-toggle="sidebar"
       aria-label="Hide Sidebar"></a>
     <!-- Navbar Right Menu-->
@@ -61,7 +61,7 @@
         <ul class="treeview-menu">
           <li><a class="treeview-item" href="Patient_Triage_AddTriageInfo.html"><i class="icon fa fa-circle-o"></i>
               智能分诊</a></li>
-          <li><a class="treeview-item" href="Patient_Triage_TriageInfo.html" target="_blank" rel="noopener"><i
+          <li><a class="treeview-item" href="Patient_Triage_TriageInfo.html" rel="noopener"><i
                 class="icon fa fa-circle-o"></i>分诊历史</a></li>
         </ul>
       </li>
@@ -85,7 +85,6 @@
       </li>
       <li><a class="app-menu__item" href="Patient_Chat.html"><i class="app-menu__icon fa fa-pie-chart"></i><span
             class="app-menu__label">消息盒子</span></a></li>
-
     </ul>
   </aside>
 
@@ -97,7 +96,7 @@
       <ul class="app-breadcrumb breadcrumb">
         <li class="breadcrumb-item"><i class="fa fa-home fa-lg"></i></li>
         <li class="breadcrumb-item">挂号服务</li>
-        <li class="breadcrumb-item active"><a href="#">门诊预约</a></li>
+        <li class="breadcrumb-item active"><a style="color:#009688;" href="#">门诊预约</a></li>
       </ul>
     </div>
     <div class="row">
@@ -105,55 +104,60 @@
         <div class="tile">
           <h3 class="tile-title" style="text-align: center;">出诊信息</h3>
           <div class="tile-body">
-            <table class="table table-hover">
-              <thead>
-                <tr>
-                  <th></th>
-                  <th>科室</th>
-                  <th>出诊时间</th>
-                  <th>上下午</th>
-                  <th>剩余人数</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>
-                    <div class="animated-radio-button">
-                      <label>
-                        <input class="form-check-input" type="radio" name="item"><span class="label-text"></span>
-                      </label>
-                    </div>
-                  </td>
-                  <td>Mark</td>
-                  <td>Otto</td>
-                  <td>@mdo</td>
-                </tr>
-                <tr>
-                  <td>
-                    <div class="animated-radio-button">
-                      <label>
-                        <input class="form-check-input" type="radio" name="item"><span class="label-text"></span>
-                      </label>
-                    </div>
-                  </td>
-                  <td>Jacob</td>
-                  <td>Thornton</td>
-                  <td>@fat</td>
-                </tr>
-                <tr>
-                  <td>
-                    <div class="animated-radio-button">
-                      <label>
-                        <input class="form-check-input" type="radio" name="item"><span class="label-text"></span>
-                      </label>
-                    </div>
-                  </td>
-                  <td>Larry</td>
-                  <td>the Bird</td>
-                  <td>@twitter</td>
-                </tr>
-              </tbody>
-            </table>
+            <div class="table-responsive">
+              <table class="table table-hover table-bordered" id="sampleTable">
+                <thead>
+                  <tr>
+                    <th></th>
+                    <th>科室</th>
+                    <th>预约日期</th>
+                    <th>时间段</th>
+                    <th>剩余人数</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>
+                      <div class="animated-radio-button">
+                        <label>
+                          <input class="form-check-input" type="radio" name="item"><span class="label-text"></span>
+                        </label>
+                      </div>
+                    </td>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>@mdo</td>
+                    <td>@mdo</td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <div class="animated-radio-button">
+                        <label>
+                          <input class="form-check-input" type="radio" name="item"><span class="label-text"></span>
+                        </label>
+                      </div>
+                    </td>
+                    <td>Jacob</td>
+                    <td>Thornton</td>
+                    <td>@fat</td>
+                    <td>@mdo</td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <div class="animated-radio-button">
+                        <label>
+                          <input class="form-check-input" type="radio" name="item"><span class="label-text"></span>
+                        </label>
+                      </div>
+                    </td>
+                    <td>Larry</td>
+                    <td>the Bird</td>
+                    <td>@twitter</td>
+                    <td>@twitter</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
         </div>
       </div>
@@ -219,18 +223,6 @@
                   <input class="form-control" type="text" disabled="" placeholder="请于左侧选择获取">
                 </div>
               </div>
-              <div class="form-group row">
-                <label class="control-label col-md-3"
-                  style="text-align: center;vertical-align: middle;margin-top: 10px;">就诊时段选择</label>
-                <div class="col-md-8">
-                  <select class="form-control" id="exampleSelect1">
-                    <option>8:00--9:00</option>
-                    <option>9:00--10:00</option>
-                    <option>10:00--11:00</option>
-                    <option>11:00--12:00</option>
-                  </select>
-                </div>
-              </div>
             </form>
           </div>
 
@@ -259,6 +251,9 @@
   <script src="../layui/layui.js"></script>
   <!-- Page specific javascripts-->
   <script type="text/javascript" src="../js/plugins/bootstrap-datepicker.min.js"></script>
+  <script type="text/javascript" src="js/plugins/jquery.dataTables.min.js"></script>
+  <script type="text/javascript" src="js/plugins/dataTables.bootstrap.min.js"></script>
+  <script type="text/javascript">$('#sampleTable').DataTable();</script>
   <!-- Google analytics script-->
   <script type="text/javascript">
     if (document.location.hostname == 'pratikborsadiya.in') {
