--- a/patient/Patient_Registration_RegInfo.html
+++ b/patient/Patient_Registration_RegInfo.html
@@ -25,7 +25,7 @@
 
 <body class="app sidebar-mini">
   <!-- Navbar-->
-  <header class="app-header"><a class="app-header__logo" href="index.html">Vali</a>
+  <header class="app-header"><a class="app-header__logo" href="index.html">Yiyi</a>
     <!-- Sidebar toggle button--><a class="app-sidebar__toggle" href="#" data-toggle="sidebar"
       aria-label="Hide Sidebar"></a>
     <!-- Navbar Right Menu-->
@@ -61,7 +61,7 @@
         <ul class="treeview-menu">
           <li><a class="treeview-item" href="Patient_Triage_AddTriageInfo.html"><i class="icon fa fa-circle-o"></i>
               智能分诊</a></li>
-          <li><a class="treeview-item" href="Patient_Triage_TriageInfo.html" target="_blank" rel="noopener"><i
+          <li><a class="treeview-item" href="Patient_Triage_TriageInfo.html" rel="noopener"><i
                 class="icon fa fa-circle-o"></i>分诊历史</a></li>
         </ul>
       </li>
@@ -96,7 +96,7 @@
       <ul class="app-breadcrumb breadcrumb">
         <li class="breadcrumb-item"><i class="fa fa-home fa-lg"></i></li>
         <li class="breadcrumb-item">挂号服务</li>
-        <li class="breadcrumb-item active"><a href="#">预约历史</a></li>
+        <li class="breadcrumb-item active"><a style="color:#009688;" href="#">预约历史</a></li>
       </ul>
     </div>
     <div class="row">
@@ -139,7 +139,6 @@
         </div>
       </div>
     </div>
-
   </main>
 
   <!-- Essential javascripts for application to work-->
