--- a/patient/Patient_Triage_AddTriageInfo.html
+++ b/patient/Patient_Triage_AddTriageInfo.html
@@ -25,7 +25,7 @@
 
 <body class="app sidebar-mini">
   <!-- Navbar-->
-  <header class="app-header"><a class="app-header__logo" href="index.html">Vali</a>
+  <header class="app-header"><a class="app-header__logo" href="index.html">Yiyi</a>
     <!-- Sidebar toggle button--><a class="app-sidebar__toggle" href="#" data-toggle="sidebar"
       aria-label="Hide Sidebar"></a>
     <!-- Navbar Right Menu-->
@@ -62,7 +62,7 @@
           <li><a class="treeview-item active" href="Patient_Triage_AddTriageInfo.html"><i
                 class="icon fa fa-circle-o"></i>
               智能分诊</a></li>
-          <li><a class="treeview-item" href="Patient_Triage_TriageInfo.html" target="_blank" rel="noopener"><i
+          <li><a class="treeview-item" href="Patient_Triage_TriageInfo.html" rel="noopener"><i
                 class="icon fa fa-circle-o"></i>分诊历史</a></li>
         </ul>
       </li>
@@ -98,7 +98,7 @@
       <ul class="app-breadcrumb breadcrumb">
         <li class="breadcrumb-item"><i class="fa fa-home fa-lg"></i></li>
         <li class="breadcrumb-item">分诊服务</li>
-        <li class="breadcrumb-item"><a href="#">智能导诊</a></li>
+        <li class="breadcrumb-item"><a style="color:#009688;" href="#">智能导诊</a></li>
       </ul>
     </div>
     <div class="row">
