--- a/patient/Patient_Triage_TriageInfo.html
+++ b/patient/Patient_Triage_TriageInfo.html
@@ -61,7 +61,7 @@
         <ul class="treeview-menu">
           <li><a class="treeview-item" href="Patient_Triage_AddTriageInfo.html"><i class="icon fa fa-circle-o"></i>
               智能分诊</a></li>
-          <li><a class="treeview-item active" href="Patient_Triage_TriageInfo.html" target="_blank" rel="noopener"><i
+          <li><a class="treeview-item active" href="Patient_Triage_TriageInfo.html" rel="noopener"><i
                 class="icon fa fa-circle-o"></i>分诊历史</a></li>
         </ul>
       </li>
@@ -97,7 +97,7 @@
       <ul class="app-breadcrumb breadcrumb">
         <li class="breadcrumb-item"><i class="fa fa-home fa-lg"></i></li>
         <li class="breadcrumb-item">分诊服务</li>
-        <li class="breadcrumb-item"><a href="#">分诊结果</a></li>
+        <li class="breadcrumb-item"><a style="color:#009688;" href="#">分诊结果</a></li>
       </ul>
     </div>
     <div class="row">
@@ -118,11 +118,11 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <td>Tiger Nixon</td>
-                    <td>System Architect</td>
-                    <td>Edinburgh</td>
-                    <td>61</td>
-                    <td>$320,800</td>
+                    <td>2020/3/18 20:20:00</td>
+                    <td>肚子疼、牙疼、头疼</td>
+                    <td>内科</td>
+                    <td>0.10</td>
+                    <td><button class="btn btn-primary btn-sm" type="button">预约挂号</button></td>
                   </tr>
                 </tbody>
               </table>
@@ -149,75 +149,12 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <td>Tiger Nixon</td>
-                    <td>System Architect</td>
-                    <td>Edinburgh</td>
-                    <td>2011/04/25</td>
-                    <td>$320,800</td>
+                    <td>2020/3/18 20:20:00</td>
+                    <td>肚子疼、牙疼、头疼</td>
+                    <td>内科</td>
+                    <td>内科</td>
+                    <td><button class="btn btn-primary btn-sm" type="button">预约挂号</button></td>
                   </tr>
-                  <tr>
-                    <td>Garrett Winters</td>
-                    <td>Accountant</td>
-                    <td>Tokyo</td>
-
-                    <td>2011/07/25</td>
-                    <td>$170,750</td>
-                  </tr>
-                  <tr>
-                    <td>Ashton Cox</td>
-                    <td>Junior Technical Author</td>
-                    <td>San Francisco</td>
-
-                    <td>2009/01/12</td>
-                    <td>$86,000</td>
-                  </tr>
-                  <tr>
-                    <td>Cedric Kelly</td>
-                    <td>Senior Javascript Developer</td>
-                    <td>Edinburgh</td>
-
-                    <td>2012/03/29</td>
-                    <td>$433,060</td>
-                  </tr>
-                  <tr>
-                    <td>Airi Satou</td>
-                    <td>Accountant</td>
-                    <td>Tokyo</td>
-
-                    <td>2008/11/28</td>
-                    <td>$162,700</td>
-                  </tr>
-                  <tr>
-                    <td>Brielle Williamson</td>
-                    <td>Integration Specialist</td>
-                    <td>New York</td>
-                    <td>2012/12/02</td>
-                    <td>$372,000</td>
-                  </tr>
-                  <tr>
-                    <td>Herrod Chandler</td>
-                    <td>Sales Assistant</td>
-                    <td>San Francisco</td>
-                    <td>2012/08/06</td>
-                    <td>$137,500</td>
-                  </tr>
-                  <tr>
-                    <td>Rhona Davidson</td>
-                    <td>Integration Specialist</td>
-                    <td>Tokyo</td>
-
-                    <td>2010/10/14</td>
-                    <td>$327,900</td>
-                  </tr>
-                  <tr>
-                    <td>Colleen Hurst</td>
-                    <td>Javascript Developer</td>
-                    <td>San Francisco</td>
-
-                    <td>2009/09/15</td>
-                    <td>$205,500</td>
-                  </tr>
-
                 </tbody>
               </table>
             </div>
