--- a/staff/Doctor_Chat.html
+++ b/staff/Doctor_Chat.html
@@ -38,13 +38,13 @@
     <ul class="app-nav">
       <!-- User Menu-->
       <li class="dropdown"><a class="app-nav__item" href="#" data-toggle="dropdown" aria-label="Open Profile Menu"><i
-        class="fa fa-user fa-lg"></i></a>
-    <ul class="dropdown-menu settings-menu dropdown-menu-right">
-      <li><a class="dropdown-item" href="Staff_PersonInfo.html"><i class="fa fa-user fa-lg"></i> 个人资料</a></li>
-      <li><a class="dropdown-item" href="Staff_Changepwd.html"><i class="fa fa-cog fa-lg"></i> 修改密码</a></li>
-      <li><a class="dropdown-item" href="../index.html"><i class="fa fa-sign-out fa-lg"></i> 注销</a></li>
-    </ul>
-  </li>
+            class="fa fa-user fa-lg"></i></a>
+        <ul class="dropdown-menu settings-menu dropdown-menu-right">
+          <li><a class="dropdown-item" href="Staff_PersonInfo.html"><i class="fa fa-user fa-lg"></i> 个人资料</a></li>
+          <li><a class="dropdown-item" href="Staff_Changepwd.html"><i class="fa fa-cog fa-lg"></i> 修改密码</a></li>
+          <li><a class="dropdown-item" href="../index.html"><i class="fa fa-sign-out fa-lg"></i> 注销</a></li>
+        </ul>
+      </li>
     </ul>
   </header>
   <!-- Sidebar menu-->
@@ -58,6 +58,8 @@
       </div>
     </div>
     <ul class="app-menu">
+      <li><a class="app-menu__item active" href="Doctor_Call.html"><i class="app-menu__icon fa fa-pie-chart"></i><span
+            class="app-menu__label">查看预约</span></a></li>
       <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i
             class="app-menu__icon fa fa-laptop"></i><span class="app-menu__label">病历</span><i
             class="treeview-indicator fa fa-angle-right"></i></a>
@@ -133,49 +135,48 @@
           <h3 class="tile-title">我的聊天</h3>
           <div class="messanger">
             <div class="row">
-              <button 
-                style="width:100%;border-width:0px;background-color: #009687a8;color: #FFF">最新消息</button>
+              <button style="width:100%;border-width:0px;background-color: #009687a8;color: #FFF">最新消息</button>
             </div>
             <div class="messages" id="group" style="max-height: 315px;min-height: 315px;">
               <div onmouseover="this.style.backgroundColor='rgb(197, 193, 193)'"
                 onmouseout="this.style.backgroundColor='#FFF'" class="message"
-                onclick="window.open('index.html','_self')"><img
-                src="../images/patient.jpg" style="width:48px;height:48px">
+                onclick="window.open('index.html','_self')"><img src="../images/patient.jpg"
+                  style="width:48px;height:48px">
                 病患1
               </div>
               <div onmouseover="this.style.backgroundColor='rgb(197, 193, 193)'"
-                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img
-                src="../images/patient.jpg" style="width:48px;height:48px">
+                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img src="../images/patient.jpg"
+                  style="width:48px;height:48px">
                 病患2
               </div>
               <div onmouseover="this.style.backgroundColor='rgb(197, 193, 193)'"
-                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img
-                src="../images/patient.jpg" style="width:48px;height:48px">
+                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img src="../images/patient.jpg"
+                  style="width:48px;height:48px">
                 病患3
               </div>
               <div onmouseover="this.style.backgroundColor='rgb(197, 193, 193)'"
-                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img
-                src="../images/patient.jpg" style="width:48px;height:48px">
+                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img src="../images/patient.jpg"
+                  style="width:48px;height:48px">
                 病患4
               </div>
               <div onmouseover="this.style.backgroundColor='rgb(197, 193, 193)'"
-                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img
-                src="../images/patient.jpg" style="width:48px;height:48px">
+                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img src="../images/patient.jpg"
+                  style="width:48px;height:48px">
                 病患5
               </div>
               <div onmouseover="this.style.backgroundColor='rgb(197, 193, 193)'"
-                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img
-                src="../images/patient.jpg" style="width:48px;height:48px">
+                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img src="../images/patient.jpg"
+                  style="width:48px;height:48px">
                 病患6
               </div>
               <div onmouseover="this.style.backgroundColor='rgb(197, 193, 193)'"
-                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img
-                src="../images/patient.jpg" style="width:48px;height:48px">
+                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img src="../images/patient.jpg"
+                  style="width:48px;height:48px">
                 病患7
               </div>
               <div onmouseover="this.style.backgroundColor='rgb(197, 193, 193)'"
-                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img
-                src="../images/patient.jpg" style="width:48px;height:48px">
+                onmouseout="this.style.backgroundColor='#FFF'" class="message"><img src="../images/patient.jpg"
+                  style="width:48px;height:48px">
                 病患8
               </div>
 
@@ -187,14 +188,14 @@
 
     </div>
   </main>
- <!-- Essential javascripts for application to work-->
- <script src="../js/jquery-3.3.1.min.js"></script>
- <script src="../js/popper.min.js"></script>
- <script src="../js/bootstrap.min.js"></script>
- <script src="../js/main.js"></script>
- <!-- The javascript plugin to display page loading on top-->
- <script src="../js/plugins/pace.min.js"></script>
- <script src="../layui/layui.js"></script>
+  <!-- Essential javascripts for application to work-->
+  <script src="../js/jquery-3.3.1.min.js"></script>
+  <script src="../js/popper.min.js"></script>
+  <script src="../js/bootstrap.min.js"></script>
+  <script src="../js/main.js"></script>
+  <!-- The javascript plugin to display page loading on top-->
+  <script src="../js/plugins/pace.min.js"></script>
+  <script src="../layui/layui.js"></script>
   <!-- Page specific javascripts-->
   <script type="text/javascript" src="js/plugins/jquery.vmap.min.js"></script>
   <script type="text/javascript" src="js/plugins/jquery.vmap.world.js"></script>
@@ -221,10 +222,10 @@
   <script type="text/javascript">
     if (document.location.hostname == 'pratikborsadiya.in') {
       (function (i, s, o, g, r, a, m) {
-      i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-        (i[r].q = i[r].q || []).push(arguments)
-      }, i[r].l = 1 * new Date(); a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+          (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date(); a = s.createElement(o),
+          m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
       })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
       ga('create', 'UA-72504830-1', 'auto');
       ga('send', 'pageview');
