--- a/staff/Staff_PersonInfo.html
+++ b/staff/Staff_PersonInfo.html
@@ -2,26 +2,33 @@
 <html lang="en">
 
 <head>
+  <meta name="description"
+    content="Vali is a responsive and free admin theme built with Bootstrap 4, SASS and PUG.js. It's fully customizable and modular.">
+  <!-- Twitter meta-->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:site" content="@pratikborsadiya">
+  <meta property="twitter:creator" content="@pratikborsadiya">
   <!-- Open Graph Meta-->
   <meta property="og:type" content="website">
-  <meta property="og:site_name" content="Vali Admin">
-  <meta property="og:title" content="Vali - Free Bootstrap 4 admin theme">
+  <meta property="og:site_name" content="YY">
+  <meta property="og:title" content="">
   <meta property="og:url" content="http://pratikborsadiya.in/blog/vali-admin">
   <meta property="og:image" content="http://pratikborsadiya.in/blog/vali-admin/hero-social.png">
-  <meta property="og:description"
-    content="Vali is a responsive and free admin theme built with Bootstrap 4, SASS and PUG.js. It's fully customizable and modular.">
-  <title>易医 - 护士个人资料</title>
+  <meta property="og:description" content="YYProject is only programmed for zhsjsy.">
+  <title>易医-职工个人资料</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Main CSS-->
-  <link rel="stylesheet" type="text/css" href="css/main.css">
-  <link rel="stylesheet" type="text/css" href="css/triage.css">
-  <link rel="stylesheet" type="text/css" href="layui/css/layui.css">
+  <link rel="stylesheet" type="text/css" href="../css/main.css">
   <!-- Font-icon css-->
   <link rel="stylesheet" type="text/css"
     href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
+
+  <head>
+    <meta charset="UTF-8">
+    <title>易医-职工个人资料</title>
+  </head>
 
 <body class="app sidebar-mini">
   <!-- Navbar-->
@@ -34,22 +41,21 @@
       <li class="dropdown"><a class="app-nav__item" href="#" data-toggle="dropdown" aria-label="Open Profile Menu"><i
             class="fa fa-user fa-lg"></i></a>
         <ul class="dropdown-menu settings-menu dropdown-menu-right">
-          <li><a class="dropdown-item" href="page-user.html"><i class="fa fa-user fa-lg"></i> 个人资料</a></li>
-          <li><a class="dropdown-item" href="page-login.html"><i class="fa fa-sign-out fa-lg"></i> 修改密码</a></li>
-          <li><a class="dropdown-item" href="page-login.html"><i class="fa fa-sign-out fa-lg"></i> 注销</a></li>
+          <li><a class="dropdown-item" href="Staff_PersonInfo.html"><i class="fa fa-user fa-lg"></i> 个人资料</a></li>
+          <li><a class="dropdown-item" href="Staff_Changepwd.html"><i class="fa fa-cog fa-lg"></i> 修改密码</a></li>
+          <li><a class="dropdown-item" href="../index.html"><i class="fa fa-sign-out fa-lg"></i> 注销</a></li>
         </ul>
       </li>
     </ul>
   </header>
-
   <!-- Sidebar menu-->
   <div class="app-sidebar__overlay" data-toggle="sidebar"></div>
   <aside class="app-sidebar">
     <div class="app-sidebar__user"><img class="app-sidebar__user-avatar"
         src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/48.jpg" alt="User Image">
       <div>
-        <p class="app-sidebar__user-name">职工名</p>
-        <p class="app-sidebar__user-designation">职务编号+科室+title</p>
+        <p class="app-sidebar__user-name">John Doe</p>
+        <p class="app-sidebar__user-designation">Frontend Developer</p>
       </div>
     </div>
     <ul class="app-menu">
@@ -63,12 +69,12 @@
           </li>
           <li><a class="treeview-item" href="Doctor_MedicalRecord_History.html"><i class="icon fa fa-circle-o"></i>
               历史记录</a></li>
-          <li><a class="treeview-item" href="Nurse_MedicalRecord_Search.html"><i class="icon fa fa-circle-o"></i>
+          <li><a class="treeview-item" href="Doctor_MedicalRecord_Search.html"><i class="icon fa fa-circle-o"></i>
               病患查找</a></li>
         </ul>
       </li>
       <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i
-            class="app-menu__icon fa fa-laptop"></i><span class="app-menu__label">点滴提示</span><i
+            class="app-menu__icon fa fa-dashboard"></i><span class="app-menu__label">点滴提示</span><i
             class="treeview-indicator fa fa-angle-right"></i></a>
         <ul class="treeview-menu">
           <li><a class="treeview-item" href="Nurse_Drip_Add.html"><i class="icon fa fa-circle-o"></i>添加清单</a>
@@ -77,13 +83,12 @@
         </ul>
       </li>
       <li><a class="app-menu__item" href="Staff_Triage_UpdateTriageInfo.html"><i
-            class="app-menu__icon fa fa-dashboard"></i><span class="app-menu__label">分诊管理</span></a></li>
+            class="app-menu__icon fa fa-pie-chart"></i><span class="app-menu__label">分诊管理</span></a></li>
 
-      <li><a class="app-menu__item" href="Staff_Chat.html"><i class="app-menu__icon fa fa-dashboard"></i><span
+      <li><a class="app-menu__item" href="Staff_Chat.html"><i class="app-menu__icon fa fa-file-text"></i><span
             class="app-menu__label">消息盒子</span></a></li>
     </ul>
   </aside>
-
   <main class="app-content">
     <div class="app-title">
       <div>
@@ -91,54 +96,67 @@
       </div>
       <ul class="app-breadcrumb breadcrumb">
         <li class="breadcrumb-item"><i class="fa fa-home fa-lg"></i></li>
-        <li class="breadcrumb-item"><a href="#">个人资料</a></li>
+        <li class="breadcrumb-item"><a style="color:#009688;" href="#">个人资料</a></li>
       </ul>
     </div>
 
+
     <div class="hhh">
       <div class="row">
-        <div class="col-md-12  showdata">
+
+        <div class="col-md-12 showdata">
           <div class="tile">
-            <div class="row">
-              <div class="col-lg-6 offset-lg-2" style="padding-top: 30px;">
+            <div class="row ">
+              <div class="col-lg-6 offset-lg-2 " style="padding-top: 30px;">
                 <h3 class="tile-title" style="border-bottom: 1px solid #ddd; padding-bottom: 10px">个人信息</h3>
                 <div class="tile-body">
                   <form class="form-horizontal">
                     <div class="form-group row">
                       <label class="control-label col-md-3">姓名</label>
                       <div class="col-md-8">
-                        张三
+                        李四
                       </div>
                     </div>
                     <div class="form-group row">
                       <label class="control-label col-md-3">性别</label>
                       <div class="col-md-8">
-                        男
+                        女
                       </div>
                     </div>
                     <div class="form-group row">
                       <label class="control-label col-md-3">联系方式</label>
                       <div class="col-md-8">
-                        15856897685
+                        18620553076
+                      </div>
+                    </div>
+                    <div class="form-group row">
+                      <label class="control-label col-md-3">出生日期</label>
+                      <div class="col-md-8">
+                        1997-10-03
+                      </div>
+                    </div>
+                    <div class="form-group row">
+                      <label class="control-label col-md-3">社保卡号</label>
+                      <div class="col-md-8">
+                        104908326908564
+                      </div>
+                    </div>
+                    <div class="form-group row">
+                      <label class="control-label col-md-3">身份证号</label>
+                      <div class="col-md-8">
+                        1973809835436456
                       </div>
                     </div>
                     <div class="form-group row">
                       <label class="control-label col-md-3">电子邮箱</label>
                       <div class="col-md-8">
-                        1452345678@qq.com
-                      </div>
-                    </div>
-                    <div class="form-group row">
-                      <label class="control-label col-md-3">工号</label>
-                      <div class="col-md-8">
-                        1486748
+                        1990856975@qq.com
                       </div>
                     </div>
 
                   </form>
                 </div>
               </div>
-
               <div class="col-lg-2" style="padding-top: 30px;">
                 <button class="btn btn-primary" type="button" onclick="huan()">修 改 信 息</button>
               </div>
@@ -170,19 +188,32 @@
                       </div>
                     </div>
                     <div class="form-group row">
+                      <label class="control-label col-md-3">出生日期</label>
+                      <div class="col-md-8">
+                        <input class="form-control" type="birthday" placeholder="请填写出生日期">
+                      </div>
+                    </div>
+                    <div class="form-group row">
+                      <label class="control-label col-md-3">社保卡号</label>
+                      <div class="col-md-8">
+                        <input class="form-control" type="number" placeholder="请填写社保卡号">
+                      </div>
+                    </div>
+                    <div class="form-group row">
+                      <label class="control-label col-md-3">身份证号</label>
+                      <div class="col-md-8">
+                        <input class="form-control" type="IDnumber" placeholder="请填写身份证号">
+                      </div>
+                    </div>
+                    <div class="form-group row">
                       <label class="control-label col-md-3">电子邮箱</label>
                       <div class="col-md-8">
                         <input class="form-control" type="email" placeholder="请填写电子邮箱">
                       </div>
                     </div>
                     <div class="form-group row">
-                      <label class="control-label col-md-3">工号</label>
-                      <div class="col-md-8">
-                        <input class="form-control" type="number" placeholder="请填写工号">
-                      </div>
-                    </div>
-                    <div class="form-group row">
                       <label class="control-label col-md-3">性别</label>
+
                       <div class="animated-checkbox">
                         &nbsp; &nbsp; &nbsp;<label>
                           <input type="checkbox"><span class="label-text">女</span>
@@ -215,26 +246,49 @@
                   </div>
                 </div>
               </div>
+
             </div>
           </div>
         </div>
       </div>
     </div>
 
-
-
     </div>
   </main>
 
+
+
   <!-- Essential javascripts for application to work-->
-  <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/main.js"></script>
+  <script src="../js/jquery-3.3.1.min.js"></script>
+  <script src="../js/popper.min.js"></script>
+  <script src="../js/bootstrap.min.js"></script>
+  <script src="../js/main.js"></script>
   <!-- The javascript plugin to display page loading on top-->
-  <script src="js/plugins/pace.min.js"></script>
-  <script src="layui/layui.js"></script>
+  <script src="../js/plugins/pace.min.js"></script>
   <!-- Page specific javascripts-->
+  <script type="text/javascript" src="../js/plugins/bootstrap-datepicker.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/select2.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/bootstrap-datepicker.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/dropzone.js"></script>
+  <script type="text/javascript">
+    $('#sl').on('click', function () {
+      $('#tl').loadingBtn();
+      $('#tb').loadingBtn({ text: "Signing In" });
+    });
+
+    $('#el').on('click', function () {
+      $('#tl').loadingBtnComplete();
+      $('#tb').loadingBtnComplete({ html: "Sign In" });
+    });
+
+    $('#demoDate').datepicker({
+      format: "dd/mm/yyyy",
+      autoclose: true,
+      todayHighlight: true
+    });
+
+    $('#demoSelect').select2();
+  </script>
   <!-- Google analytics script-->
   <script type="text/javascript">
     if (document.location.hostname == 'pratikborsadiya.in') {
@@ -247,32 +301,15 @@
       ga('create', 'UA-72504830-1', 'auto');
       ga('send', 'pageview');
     }
-
-
-    $(document).ready(function () {
-      $('.woman_front_head').hover(function () {
-        $(".headLink").css('display', 'block');
-      }, function () {
-        $(".headLink").css('display', 'none');
-      });
-      $(".headLink").hover(function () {
-        $(this).css('display', 'block');
-      }, function () {
-        $(this).css('display', 'none');
-      });
-
-      $(".woman_box").hide();
-    });
-
-
-
   </script>
+
   <script>
     function huan() {
       $(".showdata").hide();
       $(".hhh").show();
     }
   </script>
+
 </body>
 
 </html>
