--- a/staff/Staff_Triage_UpdateTriageInfo.html
+++ b/staff/Staff_Triage_UpdateTriageInfo.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="http://pratikborsadiya.in/blog/vali-admin/hero-social.png">
   <meta property="og:description"
     content="Vali is a responsive and free admin theme built with Bootstrap 4, SASS and PUG.js. It's fully customizable and modular.">
-  <title>易医 - 管理系统</title>
+  <title>易医 - 分诊管理</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -53,6 +53,8 @@
       </div>
     </div>
     <ul class="app-menu">
+      <li><a class="app-menu__item active" href="Doctor_Call.html"><i class="app-menu__icon fa fa-pie-chart"></i><span
+            class="app-menu__label">查看预约</span></a></li>
       <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i
             class="app-menu__icon fa fa-laptop"></i><span class="app-menu__label">病历</span><i
             class="treeview-indicator fa fa-angle-right"></i></a>
@@ -89,7 +91,7 @@
       </div>
       <ul class="app-breadcrumb breadcrumb">
         <li class="breadcrumb-item"><i class="fa fa-home fa-lg"></i></li>
-        <li class="breadcrumb-item"><a href="#">分诊管理</a></li>
+        <li class="breadcrumb-item"><a style="color:#009688;" href="#">分诊管理</a></li>
       </ul>
     </div>
     <div class="row">
